--- a/examples/templates.html
+++ b/examples/templates.html
@@ -1,5 +1,10 @@
+<div>
+  this is a document with templates
+</div>
 <template name="foobar">
   <div>
     FooBar!
   </div>
 </template>
+<foobar>
+</foobar>
