simple handlebars interpolation

--- a/examples/templates.html
+++ b/examples/templates.html
@@ -3,8 +3,8 @@
 </div>
 <template name="foobar">
   <div>
-    FooBar!
+    FooBar to {{to}}!
   </div>
 </template>
-<foobar>
+<foobar to="Tom">
 </foobar>
